dist_pkgdata_DATA = JC.PNG JD.PNG JH.PNG JS.PNG KC.PNG KD.PNG KH.PNG KS.PNG QC.PNG QD.PNG QH.PNG \
	QS.PNG
	
EXTRA_DIST = create_ai_icon.sh

install-data-hook:
	$(LN_S) QS.PNG "$(DESTDIR)$(pkgdatadir)"/ai_img1.png
	$(LN_S) KC.PNG "$(DESTDIR)$(pkgdatadir)"/ai_img2.png
	$(LN_S) QC.PNG "$(DESTDIR)$(pkgdatadir)"/ai_img3.png
