dist_pkgdata_DATA = JC.PNG JD.PNG JH.PNG JS.PNG KC.PNG KD.PNG KH.PNG KS.PNG QC.PNG QD.PNG QH.PNG \
	QS.PNG

install-data-hook:
	$(LN_S) $(DESTDIR)$(pkgdatadir)/QS.PNG $(DESTDIR)$(pkgdatadir)/ai_img1.png
	$(LN_S) $(DESTDIR)$(pkgdatadir)/KC.PNG $(DESTDIR)$(pkgdatadir)/ai_img2.png
	$(LN_S) $(DESTDIR)$(pkgdatadir)/QC.PNG $(DESTDIR)$(pkgdatadir)/ai_img3.png
